--- a/.tekton/notebooks-group-test.yaml
+++ b/.tekton/notebooks-group-test.yaml
@@ -44,3 +44,11 @@ spec:
   - name: git-auth
     secret:
       secretName: '{{ git_auth_secret }}'
+  - name: shared-workspace
+    volumeClaimTemplate:
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 1Gi
