chore(.tekton): `build-platforms` parameter to Tekton ROCm base image pipelines (UBI9 and C9S) to use bigger builder
these failed to build after regular push in
https://github.com/opendatahub-io/notebooks/commit/17324ee6f498427167c8963fb0fc83625ab9ec12

```
"2026-02-17T08:45:23Z"}: copying layers and metadata for container "6a05fbf426988886db3044deb4260998ca3353c3ca46d0184aa50b7e714fb781": writing blob: storing blob to file "/var/tmp/container_images_storage3020200769/1": write /var/tmp/container_images_storage3020200769/1: no space left on device
```

--- a/.tekton/odh-base-image-rocm-6-4-py312-ubi9-push.yaml
+++ b/.tekton/odh-base-image-rocm-6-4-py312-ubi9-push.yaml
@@ -26,6 +26,9 @@ spec:
     value: '{{revision}}'
   - name: output-image
     value: quay.io/opendatahub/odh-base-image-rocm-py312-ubi9:{{revision}}
+  - name: build-platforms
+    value:
+      - linux-d160-m2xlarge/amd64
   - name: dockerfile
     value: base-images/rocm/6.4/ubi9-python-3.12/Dockerfile.rocm
   - name: build-args-file
