--- a/.tekton/odh-base-image-rocm-6-4-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-rocm-6-4-py312-c9s-push.yaml
@@ -25,6 +25,9 @@ spec:
     value: '{{revision}}'
   - name: output-image
     value: quay.io/opendatahub/odh-base-image-rocm-py312-c9s:{{revision}}
+  - name: build-platforms
+    value:
+      - linux-d160-m2xlarge/amd64
   - name: dockerfile
     value: base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
   - name: build-args-file
